调整部分字段
