# packages/issue-static/src/types/index.ts
@@ -1,4 +1,4 @@
 export * from "./issueComment/issue-comment";
 export * from "./issueComment/issue-comment-spec";
 export * from "./issueComment/issue-detail-media";
-export * from "./issueComment/issue-detail-content";
+export * from "./issueComment/issue-comment-content";
