# packages/issue-static/src/types/issueComment/issue-comment-content.ts
@@ -4,7 +4,7 @@
  * Halo
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
- * The version of the OpenAPI document: 2.20.18
+ * The version of the OpenAPI document: 2.21.1
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -15,30 +15,30 @@
 
 // May contain unused imports in some cases
 // @ts-ignore
-import type { IssueDetailMedia } from './issue-detail-media';
+import type { IssueCommentMedia } from './issue-comment-media';
 
 /**
  * 
  * @export
- * @interface IssueDetailContent
+ * @interface IssueCommentContent
  */
-export interface IssueDetailContent {
+export interface IssueCommentContent {
     /**
      * Rendered result with HTML format
      * @type {string}
-     * @memberof IssueDetailContent
+     * @memberof IssueCommentContent
      */
     'html'?: string;
     /**
      * Medium of issueDetail
-     * @type {Array<IssueDetailMedia>}
-     * @memberof IssueDetailContent
+     * @type {Array<IssueCommentMedia>}
+     * @memberof IssueCommentContent
      */
-    'medium'?: Array<IssueDetailMedia>;
+    'medium'?: Array<IssueCommentMedia>;
     /**
      * Raw of content
      * @type {string}
-     * @memberof IssueDetailContent
+     * @memberof IssueCommentContent
      */
     'raw'?: string;
 }
